--- a/src/app/space/hangar/hangar.component.html
+++ b/src/app/space/hangar/hangar.component.html
@@ -1,2 +1,13 @@
-<app-space-ship *ngFor="let spaceShip of spaceShips" [spaceShip]="spaceShip"></app-space-ship>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <app-space-ship *ngFor="let spaceShip of spaceShips" [spaceShip]="spaceShip"></app-space-ship>
+        </div>
+        <div class="col-6">
+            <app-pilot-room></app-pilot-room>
+        </div>
+    </div>
+</div>
+
+
 
