--- a/src/app/space/hangar/hangar.component.html
+++ b/src/app/space/hangar/hangar.component.html
@@ -11,11 +11,8 @@
                     <app-pilot-room (selected)="selectedPilot = $event"></app-pilot-room>
                 </div>
                 <div class="row">
-                    <app-engineers-room></app-engineers-room>
+                    <app-engineers-room (shipProduced)="spaceShips.push($event)"></app-engineers-room>
                 </div>
         </div>
     </div>
 </div>
-
-
-
