--- a/src/app/space/hangar/hangar.component.html
+++ b/src/app/space/hangar/hangar.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
-            <app-space-ship *ngFor="let spaceShip of spaceShips" [spaceShip]="spaceShip">
+            <app-space-ship *ngFor="let spaceShip of spaceShips | async" [spaceShip]="spaceShip">
                 <button *ngIf="selectedPilot && !spaceShip.pilot" (click)="assignPilot(spaceShip)">Pilotuj</button>
                 <button *ngIf="spaceShip.pilot" (click)="deassignPilot(spaceShip)">Opuść</button>
             </app-space-ship>
         </div>
         <div class="col-6">
                 <div class="row">
-                    <app-pilot-room (selected)="selectedPilot = $event"></app-pilot-room>
-                </div>
+                        <app-engineers-room></app-engineers-room>
+                    </div>
                 <div class="row">
-                    <app-engineers-room (shipProduced)="spaceShips.push($event)"></app-engineers-room>
+                    <app-pilot-room (selected)="selectedPilot = $event"></app-pilot-room>
                 </div>
         </div>
     </div>
