--- a/src/app/space/pilot/pilot.component.html
+++ b/src/app/space/pilot/pilot.component.html
@@ -1,3 +1,3 @@
 <p style="font-weight: bold">{{ pilot.fullName }}</p>
-<img [src]="pilot.imageUrl" />
+<img appSpaceImage [src]="pilot.imageUrl" />
 <ng-content></ng-content>
