--- a/src/app/space/space-ship/space-ship.component.html
+++ b/src/app/space/space-ship/space-ship.component.html
@@ -7,10 +7,10 @@
   <div [style.width.%]="spaceShip.health"></div>
 </div>
 <div class="property" [class.active]="spaceShip.activeShields">
-  SHIELDS
+  {{ spaceShip.activeShields | tickize }} SHIELDS
 </div>
 <div class="property" [class.active]="spaceShip.activeWeapons">
-  WEAPONS
+    {{ spaceShip.activeWeapons | tickize }} WEAPONS
 </div>
 <div class="actions">
   <ng-content></ng-content>
