--- a/src/app/space/pilot-room/pilot-room.component.html
+++ b/src/app/space/pilot-room/pilot-room.component.html
@@ -8,11 +8,18 @@
           class="select-button"  (click)="select(pilot)">
     Zaznacz
   </button>
+
   <ng-template #deselectButton>
+
     <button class="deselect-button" (click)="select(null)">
       Odznacz
     </button>
+    
   </ng-template>
+
+  <button class="edit-button" [routerLink]="['pilots', pilot.id]">
+      Edytuj
+  </button>
 
 
 </app-pilot>
