--- a/src/app/space/hangar/hangar.component.html
+++ b/src/app/space/hangar/hangar.component.html
@@ -8,7 +8,15 @@
         </div>
         <div class="col-6">
                 <div class="row">
-                        <app-engineers-room></app-engineers-room>
+                    
+                        <div class="sub-nav">
+                                <a routerLink="production" routerLinkActive="active">Production</a>
+                                &nbsp;
+                                <a routerLink="destruction" routerLinkActive="active">Destruction</a>
+                        </div>
+
+                        <router-outlet></router-outlet>
+                        <!-- <app-engineers-room></app-engineers-room> -->
                     </div>
                 <div class="row">
                     <app-pilot-room (selected)="selectedPilot = $event"></app-pilot-room>
