--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+            <div class="col-12">
+                    <div class="row space-manager-block">
+                    <nav>
+                        <a routerLink="space" routerLinkActive="active">Hangar</a>
+                        <a routerLink="intel" routerLinkActive="active">Intel Browser</a>
+                    </nav>
+                </div>
+            </div>
+    </div>
+    <router-outlet></router-outlet>
+</div>
 <a2s-comm></a2s-comm>
