--- a/src/app/space/hangar/hangar.component.html
+++ b/src/app/space/hangar/hangar.component.html
@@ -1,26 +1,24 @@
-<div class="container">
+
     <div class="row">
         <div class="col-6">
-            <app-space-ship *ngFor="let spaceShip of spaceShips | async" [spaceShip]="spaceShip">
-                <button *ngIf="selectedPilot && !spaceShip.pilot" (click)="assignPilot(spaceShip)">Pilotuj</button>
-                <button *ngIf="spaceShip.pilot" (click)="deassignPilot(spaceShip)">Opuść</button>
-            </app-space-ship>
+                <div class="row space-manager-block">
+                        <app-space-ship *ngFor="let spaceShip of spaceShips | async" [spaceShip]="spaceShip">
+                                <button *ngIf="selectedPilot && !spaceShip.pilot" (click)="assignPilot(spaceShip)">Pilotuj</button>
+                                <button *ngIf="spaceShip.pilot" (click)="deassignPilot(spaceShip)">Opuść</button>
+                            </app-space-ship>
+                </div>
         </div>
         <div class="col-6">
-                <div class="row">
-                    
+                <div class="row space-manager-block">
                         <div class="sub-nav">
                                 <a routerLink="production" routerLinkActive="active">Production</a>
                                 &nbsp;
                                 <a routerLink="destruction" routerLinkActive="active">Destruction</a>
                         </div>
-
                         <router-outlet></router-outlet>
-                        <!-- <app-engineers-room></app-engineers-room> -->
                     </div>
-                <div class="row">
+                <div class="row space-manager-block">
                     <app-pilot-room (selected)="selectedPilot = $event"></app-pilot-room>
                 </div>
         </div>
     </div>
-</div>
