--- a/src/app/space/pilot-room/pilot-room.component.html
+++ b/src/app/space/pilot-room/pilot-room.component.html
@@ -1,25 +1,33 @@
-<h3>Dostępni kosmonauci</h3>
-<app-pilot 
-  *ngFor="let pilot of pilots" 
-  [pilot]="pilot"
-  [class.selected]="selectedPilot === pilot">
-
-  <button *ngIf="selectedPilot !== pilot; else deselectButton"
-          class="select-button"  (click)="select(pilot)">
-    Zaznacz
-  </button>
-
-  <ng-template #deselectButton>
-
-    <button class="deselect-button" (click)="select(null)">
-      Odznacz
-    </button>
+<div class="row" style="text-align:center">
+    <h3>Dostępni kosmonauci</h3>
+    <app-pilot 
+      *ngFor="let pilot of pilots" 
+      [pilot]="pilot"
+      [class.selected]="selectedPilot === pilot">
     
-  </ng-template>
+      <button *ngIf="selectedPilot !== pilot; else deselectButton"
+              class="select-button"  (click)="select(pilot)">
+        Zaznacz
+      </button>
+    
+      <ng-template #deselectButton>
+    
+        <button class="deselect-button" (click)="select(null)">
+          Odznacz
+        </button>
+        
+      </ng-template>
+    
+      <button class="edit-button" [routerLink]="['pilots', pilot.id]">
+          Edytuj
+      </button>
+    
+    </app-pilot>
+</div>
 
-  <button class="edit-button" [routerLink]="['pilots', pilot.id]">
-      Edytuj
-  </button>
+<div class="row">
+  <strong>Dodawanie kosmonautów:</strong>
+  <button class="add-button" [routerLink]="['pilots', 'new']">Przejdź</button>
+</div>
 
 
-</app-pilot>
